--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,24 @@
 .center {
   text-align: center;
 }
+
+.blueprint {
+  position: relative;
+}
+
+.mapicon {
+  position: absolute;
+  background: url(/img/icon.gif);
+  width:60px;
+  height:60px;
+  cursor:pointer;
+}
+
+#preview{
+	position:absolute;
+	border:1px solid #ccc;
+	background:#333;
+	padding:5px;
+	display:none;
+	color:#fff;
+	}
