--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 
 .mapicon {
   position: absolute;
-  background: url(/img/icon.gif);
+  background: url(/img/icon.png);
   width:60px;
   height:60px;
   cursor:pointer;
